--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,7 +6,7 @@ body {
   margin: 0;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
-  height: 100%;
+  min-height: 100%;
 }
 
 #__next {
@@ -26,26 +26,30 @@ h6 {
   font-weight: 400;
 }
 
-a {
-  text-decoration: none;
-
-  &:hover,
-  &:active,
-  &:focus {
-    text-decoration: underline;
-  }
-}
-
 .full-wrapper {
   width: 100%;
   height: 100%;
   padding: 0.5em;
-  background-color: $bg-color;
+  background-image: $bg-texture;
+  background-color: $bg-accent;
 }
 
 main {
   width: 100%;
   height: 100%;
-  background-image: $bg-texture;
-  background-color: $bg-accent;
+  border: 4px dotted #fbfbfb;
+}
+
+.celebration-date {
+  .day {
+    .dashed-value {
+      border: 2px dotted;
+      border-left: none;
+      border-right: none;
+    }
+
+    .day-value {
+      font-size: 3em;
+    }
+  }
 }
